updated (mis a jour des demandes et du fichier swagger)
