# routes/api.php
@@ -36,6 +36,8 @@ Route::get('/test-email', function () {
     return 'Email sent!';
 });
 
+Route::post('demandes/{id}/relance',[DemandesController::class,'relance'])->name('relancerDemande');
+
 Route::post('notification/client/all',[sendNotification::class,'sendGroupe'])->name('sendNotification.all');
 Route::post('notification/client/message',[sendNotification::class,'sendGroupeMessage'])->name('sendNotification.all');
 Route::get('demandes/notifications/test',[DemandesController::class,'getNotificationsResponse']);
